welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:8: error: not found: value nbPas
  for (c <- 1 to nbPas)
                 ^